data/derived/fa15/progs/unify/prog2120.ml.out
Characters 101-103:
  wwhile (fs,b);;
          ^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
